--- a/_posts/2016-05-22-ds1.md
+++ b/_posts/2016-05-22-ds1.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: default
 title: "Data Science Interview Question #1 + Answer"
 subtitle: "Bayesian statistics"
 author: "Shlomo K."
