--- a/assets/5daydeep/slides/12.md
+++ b/assets/5daydeep/slides/12.md
@@ -1,21 +1,10 @@
-# Τεκμηριώνουμε τον κώδικά μας
+# Day 05: Applied Deep Reinforcement Learning in Python
 
-- Το DocBlock χρησιμεύει ως inline documentation.
-- Βελτιώνει το code completion σε IDE όπως το [PhpStorm](https://www.jetbrains.com/phpstorm).
-- Μετατρέπεται αυτόματα σε API documentation, π.χ.&nbsp;[phpDocumentor](http://www.phpdoc.org).
-
-```php
-/**
- * Track a shipment by voucher number.
- *
- * @param  string $voucher                 A voucher number formatted as `PS123456789GR`
- * @return \Illuminate\Support\Collection  List of all the shipment steps
- *
- * @throws \LaravelGreece\Courier\CourierException  If the voucher number is invalid
- *
- * @license MIT
- */
-public function track($voucher) {
-  // ...
-}
-```
+- RL Basics
+- Policy Gradients
+- Actor-Critic Algorithms
+- Q-learning
+- Evolution Strategies
+- RL trouble-shooting and debugging strategies
+- Current research frontiers
+- There will be tutorials sessions for all topics, followed by hands-on lab sessions using OpenAI Gym.
