--- a/assets/5daydeep/slides/4.md
+++ b/assets/5daydeep/slides/4.md
@@ -3,9 +3,6 @@
 ### Prereqs & Preparation
 
 - Experience in `Python programming is a must`, basic knowledge of calculus, linear algebra, and probability theory.
-- We also assume `BASIC` familiarity with neural networks at the level of an intro AI class (such as one from the Russel and Norvig book). Any prior knowledge in Deep Learning is a plus, but an interest is a must!
+- We also assume `BASIC` familiarity with neural networks at the level of an intro AI class (such as one from the Russel and Norvig book).
+- Any prior knowledge in Deep Learning is a plus, but an interest is a must!
 
-### Software etc
-- Attendees are expected to bring their own laptops for the hands-on practical work.
-- A remote GPU by Microsoft will be provided for each participant.
-- A deep learning docker image based on Ubuntu Linux 16.04: https://github.com/QuantScientist/Deep-Learning-Boot-Camp/tree/master/docker
