--- a/assets/5daydeep/slides/9.md
+++ b/assets/5daydeep/slides/9.md
@@ -1,5 +1,19 @@
-# Ακολουθούμε ένα coding style
+# Day 03: Applied Deep Learning in Python and Keras
 
-- Τηρούμε το [PSR-2](https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md) coding style guide.
-- Γίνεται εύκολα με έναν αυτοματοποιημένο code fixer όπως το [PHP Coding Standards Fixer](http://cs.sensiolabs.org).
-- Ελέγχουμε αυτόματα τα coding standards χρησιμοποιώντας το [PHP Code Sniffer](https://github.com/squizlabs/PHP_CodeSniffer).
+### Deep Learning Introduction
+- Network architecture
+- Activation functions  
+- Data preprocessing  
+- Weight initialization:  
+    + Batch normalization  
+- Convolutions- Pooling
+
+### Deep Learning Advanced
+- Best practices:
+    + Adam  
+    + Learning rates  
+- Transfer learning  
+- Object detection  
+- Object segmentation  
+- Generative Models (DGAN)  
+- Text-based use cases (RNNs)
