--- a/assets/5daydeep/slides/11.md
+++ b/assets/5daydeep/slides/11.md
@@ -1,6 +1,9 @@
-# Γράφουμε unit tests
+# Day 04: Convolutional Neural Networks using Keras
 
-- Στόχος είναι να καλύψουμε το μεγαλύτερο μέρος του&nbsp;κώδικά&nbsp;μας.
-- Το [PHPUnit](https://phpunit.de) είναι το κυρίαρχο unit testing framework για&nbsp;PHP.
-- Για laravel packages ενσωματώνουμε το [Orchestra Testbench](http://orchestraplatform.com/docs/latest/components/testbench).
-- Εναλλακτικά: [phpspec](http://www.phpspec.net), [Behat](http://behat.org), [atoum](http://atoum.org), [Codeception](http://codeception.com).
+- In this session, you will use CNN’s to compete in an active Kaggle competition. Each and every step would be explained in detail.
+- This hands-on session will take you from 0 to 100 in Deep Learning with Keras.
+Our aim is to teach the fundamentals of deep learning with Convolutional Neural Networks `(CNN)`
+based on modern techniques using the Keras API and the Tensorflow backend.
+By the end participants will know how to build deep learning models, how to train them,
+what to avoid during training, what to check during training and how to perform model inference,
+especially for image based problems.
