--- a/assets/5daydeep/slides/4.md
+++ b/assets/5daydeep/slides/4.md
@@ -4,5 +4,5 @@
 
 - Experience in `Python programming is a must`, basic knowledge of calculus, linear algebra, and probability theory.
 - We also assume `BASIC` familiarity with neural networks at the level of an intro AI class (such as one from the Russel and Norvig book).
-- Any prior knowledge in Deep Learning is a plus, but an interest is a must!
+- Any prior knowledge in Deep Learning is a big plus, but an interest is a must!
 
