--- a/assets/5daydeep/slides/5.md
+++ b/assets/5daydeep/slides/5.md
@@ -6,5 +6,5 @@
 
 ### Why do we do this?
 
-- Community work
-- Contribution to Israeli healthcare associations (ALS, Cancer etc)
+- Community work.
+- Contribution to Israeli health-care associations (ALS, Cancer etc).
