--- a/assets/5daydeep/slides/9.md
+++ b/assets/5daydeep/slides/9.md
@@ -4,14 +4,11 @@
 - Network architecture
 - Activation functions  
 - Data preprocessing  
-- Weight initialization:  
-    + Batch normalization  
+- Weight initialization, Batch normalization
 - Convolutions- Pooling
 
 ### Deep Learning Advanced
-- Best practices:
-    + Adam  
-    + Learning rates  
+- Best practices, Adam,Learning rates
 - Transfer learning  
 - Object detection  
 - Object segmentation  
