--- a/assets/5daydeep/slides/4.1.md
+++ b/assets/5daydeep/slides/4.1.md
@@ -4,7 +4,7 @@
 ## Hardware
 - Attendees are expected to bring `their own laptops` for the hands-on practical work.
 - A `remote GPU` by Microsoft will be provided for each participant. 
-- Meanwhile, you can create one here https://azuremarketplace.microsoft.com/en-us/marketplace/apps/microsoft-ads.linux-data-science-vm-ubuntu?fref=gc
+- Meanwhile, you can create one !(here)[https://azuremarketplace.microsoft.com/en-us/marketplace/apps/microsoft-ads.linux-data-science-vm-ubuntu?fref=gc]
 
 ## Software
 - Please `learn Docker` before you come, we just `dont have the time to teach you` :)
